[package]
name = "spirit-level"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
heapless = "0.8.0"
lsm303agr = "0.3.0"
microbit-v2 = "0.13.0"
nb = "1.1.0"
panic-rtt-target = "0.1.3"
rtt-target = "0.5.0"
